feat: add delete events
